# RIM-interpret

./: README.md  pyproject.toml
RIM_interpret/: __init__.py
test/: tests.py
