[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "RIM-interpret"
version = "0.0.5"
authors = [
  { name="Xavier Loffree", email="Xavix500@gmail.com" },
]
description = "Interpretability metrics for machine learning models"
readme = "README.md"
keywords = ["interpretability", "rim", "lime", "shap", "permutation feature importance", "machine learning", "modelling", "omics"]
requires-python = ">=3.7"
dependencies = [
  'hatchling',
  'pandas',
  'numpy',
  'scikit-learn',
  'lime',
  'shap',
  'pytest'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xloffree/RIM-interpret"
"Bug Tracker" = "https://github.com/xloffree/RIM-interpret/issues"